kubernetes/deployment-service-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: online-event-booking-aamna-saeed
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
      - name: frontend-service
        image: aamnasaeed/frontend-service:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "300m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: online-event-booking-aamna-saeed
spec:
  type: ClusterIP
  selector:
    app: frontend-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
