kubernetes/deployment-service-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: online-event-booking-aamna-saeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: aamnasaeed/notification-service:latest
        ports:
        - containerPort: 8003
        resources:
          limits:
            cpu: "300m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: online-event-booking-aamna-saeed
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
