kubernetes/deployment-service-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: online-event-booking-aamna-saeed
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: aamnasaeed/user-service:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: online-event-booking-aamna-saeed
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
